--- a/src/mobile.css
+++ b/src/mobile.css
@@ -16,3 +16,6 @@
 #content {
     padding: 4px;
 }
+.link {
+	font-size: 2rem;
+}
